hetzner-k8s-dt-01/hankook/network/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hankook-gateway
  namespace: hankook
spec:
  gatewayClassName: traefik
  listeners:
    - name: hankook-https
      protocol: HTTPS
      port: 8443
      hostname: hankook.datentraum.de
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: hankook-tls-secret   # -> eigenes Certificate nur für hankook.hachmann.hamburg
    # - name: bar-https
    #   protocol: HTTPS
    #   port: 443
    #   hostname: bar.example.com
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: bar-example-com-tls   # -> eigenes Certificate nur für bar.example.com
